--- a/dist.ini
+++ b/dist.ini
@@ -12,9 +12,14 @@ url=/App/diffdb/diffdb
 perl=5.010001
 strict=0
 warnings=0
+DBI=0
+DBIx::Diff::Schema=0
+JSON::MaybeXS=0
 Log::ger=0.023
+Text::DiffU=0
 
 [Prereqs / DevelopX_spec]
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.0
+
