--- a/dist.ini
+++ b/dist.ini
@@ -4,9 +4,10 @@ name=App-diffdb
 
 [GenPericmdScript / GenPericmdScript diffdb]
 url=/App/diffdb/diffdb
+enable_log=1
 
 [@Author::PERLANCAR]
-:version=0.59
+:version=0.600
 
 [Prereqs]
 perl=5.010001
@@ -14,12 +15,12 @@ strict=0
 warnings=0
 DBI=0
 DBIx::Diff::Schema=0.093
+File::Temp=0
+IPC::System::Options=0.332
 JSON::MaybeXS=0
-Log::ger=0.023
-Text::DiffU=0
+Log::ger=0.037
 
 [Prereqs / DevelopX_spec]
 -phase=develop
 -relationship=x_spec
-Rinci=1.1.87
-
+Rinci=1.1.90
