Add CLI: diffdb-sqlite

--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,10 @@ name=App-diffdb
 url=/App/diffdb/diffdb
 enable_log=1
 
+[GenPericmdScript / GenPericmdScript diffdb-sqlite]
+url=/App/diffdb/diffdb_sqlite
+enable_log=1
+
 [@Author::PERLANCAR]
 :version=0.600
 
