--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,14 @@ enable_log=1
 url=/App/diffdb/diffdb_sqlite
 enable_log=1
 
+[GenPericmdScript / GenPericmdScript diffdbtable]
+url=/App/diffdb/diffdbtable
+enable_log=1
+
+[GenPericmdScript / GenPericmdScript diffdbtable-sqlite]
+url=/App/diffdb/diffdbtable_sqlite
+enable_log=1
+
 [@Author::PERLANCAR]
 :version=0.600
 
@@ -20,7 +28,7 @@ warnings=0
 DBI=0
 DBIx::Diff::Schema=0.094
 File::Temp=0
-IPC::System::Options=0.332
+IPC::System::Options=0.335
 JSON::MaybeXS=0
 Log::ger=0.037
 
@@ -28,4 +36,3 @@ Log::ger=0.037
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.90
-
