--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.003
+version=0.004
 
 name=App-diffdb
 
@@ -26,7 +26,7 @@ perl=5.010001
 strict=0
 warnings=0
 DBI=0
-DBIx::Diff::Schema=0.094
+DBIx::Util::Schema=0
 File::Temp=0
 IPC::System::Options=0.335
 JSON::MaybeXS=0
@@ -36,3 +36,4 @@ Log::ger=0.037
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.90
+
